# meropasal

./: .gitignore  AGENTS.md  CLAUDE.md  DEMO_SCRIPT.md  PROJECT_PLAN.md  TEST_PLAN.md  biome.jsonc  data_batch_1_partial.json  data_batch_2.json  data_batch_3.json  data_batch_4.json  data_batch_8.json  demo-english.webm  demo-nepali-v2.webm  extract_batch_4.py  extract_data.py  extract_stock.py  generate_batch3.py  meropasal-verification-full.webm  meropasal-verify-slideshow.webm  package.json  skills-lock.json  turbo.json  verification-24h-notes.txt  verification-meropasal.webm  vitest.convex.config.ts  wrangler.toml
.github/workflows/: build-apps.yml  deploy.yml
.pi/skills/: workos-widgets
apps/desktop/: build.sh  package.json
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: audio.rs  camera.rs  files.rs  lib.rs  main.rs  permissions.rs  updater.rs
apps/mobile/: build.sh  capacitor.config.json  capacitor.config.ts  package.json
apps/web/: .env.example  README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts  vitest.config.ts  wrangler.toml
convex/: aiScanner.bulk.test.ts  auth.config.ts  schema.ts  tsconfig.json  vite-env.d.ts
convex/functions/: admin.ts  aiScanner.ts  billTemplates.ts  customers.ts  fiscalYear.ts  globalSearch.ts  invoices.ts  ledger.ts  notifications.ts  orders.ts  organizations.ts  parties.ts  partyBankAccounts.ts  products.ts  (+8 more)
scripts/: agent-browser-invoice-pay-demo.sh
(+244 files in other folders)
