[package]
name = "meropasal-app"
version = "0.2.0"
description = "MeroPasal"
authors = ["MeroPasal"]
edition = "2021"

[lib]
name = "meropasal_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
base64 = "0.22"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
calamine = "0.26"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.37"
tokio = { version = "1", features = ["time"] }
nokhwa = { version = "0.10", features = ["input-native"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
